src/test/deca/context/invalid/without_class/incompatible_type_op_modulo_string.deca
// Description:
//    Error : operator modulo not defined with string type
//
// Result:
//    INCOMPATIBLE_TYPE_OPERATOR: Type \(.\)\+ is incompatible with type \(.\)\+ for the operator \(.\)\+
//    line 8
{
    print("hello"%4);
}

    